program inceput css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>try_2</title>
+    <link href="/styles.css" rel="stylesheet">
 </head>
 <body>
+    <div class="testEm"></div>
     
+    <div  id="testId" >text</div>
+    <div id="testId">test</div>
+
+    <span class="classNAme2">mamamia</span>
+    <div class="unu"></div>
+   <div class="trei"> 
+    <div class="doi"></div>
+</div>
+<p>pr1</p>
+<p>pr2</p>
 </body>
 </html>
